Mon Apr 24 04:21:49 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Now that I have the config file, feh can safely be called
	without any paramters, they can all be defined in the theme.
	This leaves my:
	if(argc < 2) show_usage();
	looking pretty stupid.

Mon Apr 24 03:53:16 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added --fontpath, to allow an extra directory to be specified in
	which to look for fonts. You can add this to /etc/fehrc or
	~/.fehrc to make it permanent. Something like:
	feh --fontpath /usr/share/ttfonts

Sat Apr 22 01:48:46 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* A slideshow delay of zero is now permitted. It means "go as fast
	as you can". I like it ;-) You can pause with the middle mouse
	button.

Wed Apr 19 19:42:45 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added -g, --collage. Collage mode is like montage mode, except
	the image thumbnails are distributed randomly. Run test26 for an
	example.

Tue Apr 11 18:20:21 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Make included getopt actually work if needed :)

Sat Mar 25 17:42:43 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Event loop and zooming tweak.

Sat Mar 25 02:09:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Okay, well, seeing as feh isn't resize-friendly (it's just not
	designed for it - use gimp for that stuff ;), I'm disabling
	resizing of the window. Bite me :)

Fri Mar 24 19:22:51 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Muhahaha. Config file. It had to be done, there are so many
	options now. This is totally optional of course, if you don't
	create one, you'll never notice the difference. Here's how it
	works...
	* If ~/.fehrc exists, or if not, but /etc/fehrc exists, feh will
	look in it for name/options pairs. An example entry would be:
	imagemap -rVq --thumb-width 40 --thumb-height 30
	* You can use the theme in two ways. Either 
	feh -C themename [images]
	or you can create a symbolic link to feh with the name of the