@@ -1,3 +1,8 @@
+Mon Apr 24 04:47:44 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Finally got off my arse and made the text center under the
+	images in index mode.
+
 Mon Apr 24 04:21:49 2000  Tom Gilbert  <gilbertt@btinternet.com>
 
 	* Now that I have the config file, feh can safely be called
